<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:text="信贷机构及信贷经理合作服务条款"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare1"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare2"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare3"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare4"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare5"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare6"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare7"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare8"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare9"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare10"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare11"
                    android:textColor="#747474"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:lineSpacingExtra="10dip"
                    android:text="@string/declare12"
                    android:textColor="#747474"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>