<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp" >

        <ImageView
            android:id="@+id/add_friend_header"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/add_friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/add_friend_header"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/add_friend_header"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_friend_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_friend_header"
            android:layout_alignLeft="@+id/add_friend_name"
            android:layout_marginBottom="4dp"
            android:textColor="#999"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#efefef" >
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="18dp"
        android:background="@drawable/add_friend_grayrect_bg"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/add_friend_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_friend_group"
            android:textColor="#666"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_friend_choose_group"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/add_friend_group"
            android:background="@drawable/transparent"
            android:drawableRight="@drawable/down"
            android:gravity="left|center_vertical"
            android:text="@string/add_friend_group"
            android:paddingLeft="10dp"
            android:textColor="#333"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/add_friend_verify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/add_friend_verify"
        android:textColor="#666"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_friend_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/add_friend_grayrect_bg"
        android:ems="10"
        android:lines="5"
        android:padding="8dp"
        android:gravity="left|top"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add_friend_send_apply"
        android:layout_margin="18dp"
        android:textColor="#fff"
        android:background="@drawable/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_send_apply" />

</LinearLayout>